Implemented get single payment
